# streamlit-upload-examples

./: README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
