[tool.poetry]
name = "streamlit-upload-examples"
version = "0.1.0"
description = ""
authors = ["Jonathan Cutrer <joncutrer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
pandas = "^1.3.4"
altair = "^4.1.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
